gotta put those labels above

--- a/event_attend.html
+++ b/event_attend.html
@@ -212,7 +212,9 @@
 				</div>
 				
 					{% if page.custom_fields.form_privacy_show_optin != "do-not-show" %}
+						<div class="form-style-labelabove">
 					  {% include "./privacy.html" %}
+						</div>
 					{% endif %}
 
 
