--- a/event_attendee_tools.html
+++ b/event_attendee_tools.html
@@ -99,6 +99,29 @@
 			{% if campaign.show_address1 %}{% else %}
 			<div class="event-address-hidden note opacity-50">{% filter ak_text:"event_search_results_address_hidden_until_rsvp" %}(We'll show you the exact address once you RSVP){% endfilter %}</div>
 			{% endif %}
+			
+			<div class="event-custom-fields margin-bottom-medium">
+				{% if event.custom_fields.group_name %}
+				<strong class="text-small2 text-caps opacity-50">{% filter ak_text:"event_details_group_name" %}Group Name{% endfilter %}:</strong><br>
+				<div class="event-group-name">
+					{{ event.custom_fields.group_name }}
+				</div><br>
+				{% endif %}
+				{% if event.custom_fields.facebook_url %}
+				<strong class="text-small2 text-caps opacity-50">{% filter ak_text:"event_details_facebook_url" %}Facebook URL{% endfilter %}:</strong><br>
+				<div class="event-fb-url">
+					<a href="{{ event.custom_fields.facebook_url }}">{{ event.custom_fields.facebook_url }}</a>
+				</div><br>
+				{% endif %}
+				{% if event.custom_fields.whatsapp_group_join_link %}
+				<strong class="text-small2 text-caps opacity-50">{% filter ak_text:"event_details_whatsapp_group_join_link" %}WhatsApp Group Join Link{% endfilter %}:</strong><br>
+				<div class="event-whatsapp-link">
+					<a href="{{ event.custom_fields.whatsapp_group_join_link }}">{{ event.custom_fields.whatsapp_group_join_link }}</a>
+				</div>
+				{% endif %}	
+			</div>
+			
+			
 			{% if event.distance|is_nonblank %}
 			<div class="event-distance opacity-50">{{ event.distance_str }}</div>
 			{% endif %}
