--- a/event_attendee_tools.html
+++ b/event_attendee_tools.html
@@ -100,7 +100,7 @@
 			<div class="event-address-hidden note opacity-50">{% filter ak_text:"event_search_results_address_hidden_until_rsvp" %}(We'll show you the exact address once you RSVP){% endfilter %}</div>
 			{% endif %}
 			
-			<div class="event-custom-fields margin-bottom-medium">
+			<div class="event-custom-fields margin-bottom-medium margin-top-large">
 				{% if event.custom_fields.group_name %}
 				<strong class="text-small2 text-caps opacity-50">{% filter ak_text:"event_details_group_name" %}Group Name{% endfilter %}:</strong><br>
 				<div class="event-group-name">
