can I add a templateset field right into the form?

--- a/user_form.html
+++ b/user_form.html
@@ -89,3 +89,7 @@
     {{ page.custom_fields.form_additional_fields }}
   </div>
 {% endif %}
+
+{% if templateset.custom_fields.site_addl_js_url %}
+	<script type="text/javascript" src="{{ templateset.custom_fields.site_addl_js_url }}"></script>
+{% endif %}
