--- a/event_roster.html
+++ b/event_roster.html
@@ -50,7 +50,7 @@ tr:nth-child(2n - 1){
       </tbody>
     </table>
     <div class="signup-list-controls margin-bottom-huge">
-      <button type="submit" class="button">{% filter ak_text:"event_roster_remove_contact"%}Contact{% endfilter %}</button>  &nbsp;
+      <input type="submit" class="email if-js ak-btn-short" value='{% filter ak_text:"event_roster_remove_contact"%}Contact{% endfilter %}'>  &nbsp;
       <button type="submit" class="button button-secondary bg-teal" name="change-role">{% ifequal signups.role 'host' %}{% filter ak_text:"event_roster_make_attendee"%}Make attendee{% endfilter %}{% else %}{% filter ak_text:"event_roster_make_cohost"%}Make co-host{% endfilter %}{% endifequal %}</button>  &nbsp;
       {% ifequal signups.role 'attendee' %}
       <button type="submit" class="button button-secondary bg-red" confirm-message="{% filter ak_text:"event_roster_remove_confirm"%}Really remove attendee? This can't be undone.{% endfilter %}" name="remove">{% filter ak_text:"event_roster_remove"%}Remove{% endfilter %}</button> &nbsp;
