--- a/event_host_details.html
+++ b/event_host_details.html
@@ -50,9 +50,11 @@
 	</div><br>
 	{% endif %}
 	{% if event.custom_fields.whatsapp_group_join_link %}
-	<strong class="text-small2 text-caps opacity-50">{% filter ak_text:"event_details_whatsapp_group_join_link" %}WhatsApp Group Join Link{% endfilter %}:</strong><br>
+	<br>
 	<div class="event-whatsapp-link">
-		<a href="{{ event.custom_fields.whatsapp_group_join_link }}">{{ event.custom_fields.whatsapp_group_join_link }}</a>
+		<a href="{{ event.custom_fields.whatsapp_group_join_link }}"></a>
+		<a class="button button-arrow-right bg-whatsapp-color" href="{{ event.custom_fields.whatsapp_group_join_link }}" rel="noopener" target="_blank">{% filter ak_text:"event_details_whatsapp_group_join_link" %}WhatsApp Group{% endfilter %}</a>		
+
 	</div>
 	{% endif %}	
 </div>
