--- a/event_create.html
+++ b/event_create.html
@@ -169,7 +169,7 @@
 {% endif %}
 {% if campaign.allow_private %}
         <div id="id_event_is_private_row" class="input-radio ak-input-type-event id_event_is_private cb-container">
-          <label>Visibility</label>
+          <label>{% filter ak_text:"event_create_visibility" %}Visibility{% endfilter %}</label>
           <div id="event-is-pubic-wrapper" class="input-radio-option-group">
             <input id="id_event_is_public" type="radio" class="radio" value="" name="event_is_private" />
             <label class="radio-label" for="id_event_is_public">
