--- a/thanks.html
+++ b/thanks.html
@@ -10,7 +10,7 @@
 		</form>
 		<div id="thanks-message" class="bg-dkgray-trans text-large3 c10 ct10 cm10 box box-huge margin-bottom-large">
 		{% include_tmpl form.thank_you_text %}
-		{% if request.user.is_authenticated %}
+		{% if page.custom_fields.thanks_show_map %}
 		<div>Location: {{ user.location.latitude }}, {{ user.location.longitude }}</div>
 		<div id='map-embed-350org' style='height: 70vh' data-src-latlong="{{ user.location.latitude }}, {{ user.location.longitude }}" data-src-zoom="4"></div>
 		<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
