prevent JS error by checking if element exists first
I have no idea what action_smiley is supposed to be, or why it would be in the URL args, but let's check to see if it exists first

--- a/survey.html
+++ b/survey.html
@@ -59,8 +59,10 @@
 	<script type="text/javascript">
 		jQuery( document ).ready(function() {
 				radiobtn = document.getElementById("{{ args.action_smiley }}");
-				radiobtn.checked = true;
-		});		
+				if (radiobtn){
+					radiobtn.checked = true;
+				}
+		});
 	</script>
 </section>
 
