redirect if event custom url field is present

--- a/wrapper.html
+++ b/wrapper.html
@@ -1,6 +1,7 @@
 {% load actionkit_tags %}<!doctype html>
 <html class="no-blend ak-hosted" lang="{{ page.lang.iso_code|default:"en-US" }}"{% if page.lang.is_rtl %} dir="rtl"{% endif %}>
 <head>
+	{% if event.custom_fields.url %}<meta http-equiv="refresh" content="0;url={{ event.custom_fields.url }}" />{% endif %}	
 	<title>{% if events|is_defined %}{{ event.title }} - {% client_name %}{% else %}{{ page.title }} - {% client_name %}{% endif %}</title>
 	<link rel="icon" type="image/png" href="{{ templateset.custom_fields.favicon_url }}" />
 	<meta charset="utf-8" />
