adding white overlay for url redirect

--- a/wrapper.html
+++ b/wrapper.html
@@ -1,7 +1,16 @@
 {% load actionkit_tags %}<!doctype html>
 <html class="no-blend ak-hosted" lang="{{ page.lang.iso_code|default:"en-US" }}"{% if page.lang.is_rtl %} dir="rtl"{% endif %}>
 <head>
-	{% if event.custom_fields.url %}<meta http-equiv="refresh" content="0;url={{ event.custom_fields.url }}" />{% endif %}	
+	{% if event.custom_fields.url %}
+		<meta http-equiv="refresh" content="0;url={{ event.custom_fields.url }}" />
+		<style>
+			#redirect-overlay{
+				background: white;
+				width: 100vw;
+				height: 100vh;
+			}
+		</style>
+	{% endif %}	
 	<title>{% if events|is_defined %}{{ event.title }} - {% client_name %}{% else %}{{ page.title }} - {% client_name %}{% endif %}</title>
 	<link rel="icon" type="image/png" href="{{ templateset.custom_fields.favicon_url }}" />
 	<meta charset="utf-8" />
@@ -130,6 +139,11 @@
 	</div>
 </div>
 {% endif %}
+{% if event.custom_fields.url %}
+	<div id="redirect-overlay">
+	</div>
+{% endif %}	
+
 {% if request.user.is_authenticated %}
 <div id="admin-bar" class="section padding-none border-bottom bg-white width-wide">
 	<div class="section-inner">
