put it on top of errrythang

--- a/wrapper.html
+++ b/wrapper.html
@@ -8,6 +8,8 @@
 				background: white;
 				width: 100vw;
 				height: 100vh;
+				position: absolute;
+				z-index: 9999;
 			}
 		</style>
 	{% endif %}	
