--- a/thanks.html
+++ b/thanks.html
@@ -131,8 +131,8 @@
 	</div>
 		{% if page.custom_fields.thanks_show_map %}
 		<!-- data-src-search="{{ user.country }}, {{ user.postal }}" -->
-		<div id='map-embed-350org' style='height: 80vh' data-src-layers='events' data-src-campaign-names='globalclimatestrikes,us-climate-strikes' data-src-date-range-start='2019-09-20' data-src-date-range-end='2019-09-27' data-src-search="{{ user.country }}, {{ user.postal }}"></div>
-		<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
+		<div id="map-embed-350org" style="height: 70vh;" data-src-layers="events" data-src-campaign-names="globalclimatestrikes,us-climate-strikes" data-src-date-range-start="2019-09-20" data-src-date-range-end="2019-09-27" data-src-search="{{ user.country }}, {{ user.postal }}">
+			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
 		{% endif %}
 
 </section>
