adding fff ak campaign to thanks page map

--- a/thanks.html
+++ b/thanks.html
@@ -133,7 +133,7 @@
 		<!-- data-src-search="{{ user.country }}, {{ user.postal }}" -->
 		<div id="map-embed-350org" style="height: 70vh;" 
 			data-src-layers="events" 
-			data-src-date-range-start="2019-09-20" data-src-date-range-end="2019-09-27" 
+			data-src-campaign-names="globalclimatestrike,globalclimatestrike-fff,us-climate-strikes"
 			data-src-search="{{ user.country }}, {{ user.postal }}">
 			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
 		{% endif %}
