hide the group and hub buttons

--- a/thanks.html
+++ b/thanks.html
@@ -136,6 +136,11 @@
 			data-src-campaign-names="globalclimatestrike,globalclimatestrike-fff,us-climate-strikes"
 			data-src-search="{{ user.country }}, {{ user.postal }}">
 			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
+			<style>
+			.filter-form ul li:nth-child(2), .filter-form li:nth-child(3){
+			display:none;
+			}
+			</style>
 		{% endif %}
 
 </section>
