who needs that comma anyways

--- a/thanks.html
+++ b/thanks.html
@@ -139,7 +139,7 @@
 		<div id="map-embed-350org" style="height: 70vh;" 
 			data-src-layers="events" 
 			data-src-campaign-names="globalclimatestrike,globalclimatestrike-fff,us-climate-strikes"
-			data-src-search="{{ user.country }}, {{ user.postal }}">
+			data-src-search="{{ user.country }} {{ user.postal }}">
 			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
 		{% endif %}
 
