--- a/thanks.html
+++ b/thanks.html
@@ -131,7 +131,7 @@
 	</div>
 		{% if page.custom_fields.thanks_show_map %}
 		<!-- data-src-search="{{ user.country }}, {{ user.postal }}" -->
-		<div style="display: none;">{% include_tmpl form.lang %}</div>
+		<div style="display: none;">{{ page.lang }}</div>
 		<style>
 		.filter-form ul li:nth-child(2), .filter-form li:nth-child(3){
 		display:none;
