maybe it needs quotes

--- a/thanks.html
+++ b/thanks.html
@@ -133,7 +133,7 @@
 		<!-- data-src-search="{{ user.country }}, {{ user.postal }}" -->
 		<div style="display: none;">{{ page.lang }}</div>
 		<script type="text/javascript">
-var lang = {{ page.lang }};
+var lang = "{{ page.lang }}";
 switch (lang) {
   case 'English':
     code = 'en';
