--- a/thanks.html
+++ b/thanks.html
@@ -168,7 +168,9 @@ $(function() {
 	    break;
 	}
 	
-	document.getElementById('map-embed-350org').setAttribute('data-src-lang', code);
+	{% with lang-code=code %}
+	
+//	document.getElementById('map-embed-350org').setAttribute('data-src-lang', code);
 });
 		</script>
 		<style>
@@ -179,7 +181,8 @@ $(function() {
 		<div id="map-embed-350org" style="height: 70vh;" 
 			data-src-layers="events" 
 			data-src-campaign-names="globalclimatestrike,globalclimatestrike-fff,us-climate-strikes"
-			data-src-search="{{ user.country }} {{ user.postal }}">
+			data-src-search="{{ user.country }} {{ user.postal }}"
+			data-src-lang="{{lang-code}}">
 			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
 		{% endif %}
 
