oops need an endwith

--- a/thanks.html
+++ b/thanks.html
@@ -184,6 +184,7 @@ $(function() {
 			data-src-search="{{ user.country }} {{ user.postal }}"
 			data-src-lang="{{lang-code}}">
 			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
+{% endwith %}			
 		{% endif %}
 
 </section>
