--- a/thanks.html
+++ b/thanks.html
@@ -178,7 +178,7 @@
 	    break;
 	}
 	
-//	document.getElementById('map-embed-350org').setAttribute('data-src-lang', code);
+	document.getElementById('map-embed-350org').setAttribute('data-src-lang', code);
 		</script>				
 			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
 		{% endif %}
