--- a/thanks.html
+++ b/thanks.html
@@ -177,8 +177,8 @@
 	    code = 'uk';
 	    break;
 	}
-	var lang-code = document.getElementById('ak-hosted').getAttribute('lang');	
-	document.getElementById('map-embed-350org').setAttribute('data-src-lang', lang-code);
+	var langcode = document.getElementsByTagName('html').getAttribute('lang');	
+	document.getElementById('map-embed-350org').setAttribute('data-src-lang', langcode);
 		</script>				
 			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
 		{% endif %}
