--- a/thanks.html
+++ b/thanks.html
@@ -177,7 +177,7 @@
 	    code = 'uk';
 	    break;
 	}
-	var langcode = document.getElementsByTagName('html').getAttribute('lang');	
+	var langcode = document.getElementsByTagName('html')[0].getAttribute('lang');	
 	document.getElementById('map-embed-350org').setAttribute('data-src-lang', langcode);
 		</script>				
 			<script src="https://feature-refactor--megamap.netlify.com/main.js"></script>
