event attend pages should show up in the language of the event creation page

--- a/event_attend.html
+++ b/event_attend.html
@@ -39,6 +39,12 @@
 }
 
 </style>
+<script>
+var localPageName = {{ event.local_campaign.signup_page.name|json }};
+var path = window.location.pathname;
+var newPath = path.replace('/event/' + {{ event.campaign.name|json }} + '/', '/event/' + localPageName + '/');
+if (path != newPath) window.location.pathname = newPath;
+</script>
 
 <div id="event-attend" class="bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 
