--- a/event_attend.html
+++ b/event_attend.html
@@ -46,7 +46,7 @@ console.log('localPageName: ' + localPageName);
 var path = window.location.pathname;
 console.log('path: ' + path);
 
-var newPath = path.replace('/event/' + {{ event.campaign.name|json }} + '_attend/', '/event/' + localPageName + '/');
+var newPath = path.replace(/\/{{ event.campaign.name|json }}(_attend)*\//g, '/event/' + localPageName + '/');
 console.log('newPath: ' + newPath);
 
 if (path != newPath) window.location.pathname = newPath;
