fix typo in event host tools

--- a/event_host_tools.html
+++ b/event_host_tools.html
@@ -264,7 +264,7 @@ a.cancel-link:hover,
 	</div>
 </div>
 
-	{% if cohosts or attendeeds or event.is_open_for_signup %}
+	{% if cohosts or attendees or event.is_open_for_signup %}
 <div id="host-event-details" class="section width-wide padding-medium bg-ltgray">
 	<div class="section-inner">
     <!-- Cohost roster -->
